@@ -1,3 +1,11 @@
+2009-01-14  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Makefile.am:
+	* MonoDevelop.Core.Gui.mdp:
+	* MonoDevelop.Core.Gui.Dialogs/OptionsDialog.cs: Added a new collection
+	which stores the objects modified by the options dialog, so they can
+	be properly saved by the invoker.
+
 2009-01-12  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Core.Gui.addin.xml: Registered exe/dll mime type (for
